; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/usb/extr_cdc_mbim.c_is_neigh_solicit.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/usb/extr_cdc_mbim.c_is_neigh_solicit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ipv6hdr = type { i64 }
%struct.nd_msg = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64, i64 }

@IPPROTO_ICMPV6 = common dso_local global i64 0, align 8
@NDISC_NEIGHBOUR_SOLICITATION = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i64)* @is_neigh_solicit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @is_neigh_solicit(i32* %0, i64 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.ipv6hdr*, align 8
  %6 = alloca %struct.nd_msg*, align 8
  store i32* %0, i32** %3, align 8
  store i64 %1, i64* %4, align 8
  %7 = load i32*, i32** %3, align 8
  %8 = bitcast i32* %7 to i8*
  %9 = bitcast i8* %8 to %struct.ipv6hdr*
  store %struct.ipv6hdr* %9, %struct.ipv6hdr** %5, align 8
  %10 = load %struct.ipv6hdr*, %struct.ipv6hdr** %5, align 8
  %11 = getelementptr inbounds %struct.ipv6hdr, %struct.ipv6hdr* %10, i64 1
  %12 = bitcast %struct.ipv6hdr* %11 to i8*
  %13 = bitcast i8* %12 to %struct.nd_msg*
  store %struct.nd_msg* %13, %struct.nd_msg** %6, align 8
  %14 = load i64, i64* %4, align 8
  %15 = icmp uge i64 %14, 24
  br i1 %15, label %16, label %35

16:                                               ; preds = %2
  %17 = load %struct.ipv6hdr*, %struct.ipv6hdr** %5, align 8
  %18 = getelementptr inbounds %struct.ipv6hdr, %struct.ipv6hdr* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = load i64, i64* @IPPROTO_ICMPV6, align 8
  %21 = icmp eq i64 %19, %20
  br i1 %21, label %22, label %35

22:                                               ; preds = %16
  %23 = load %struct.nd_msg*, %struct.nd_msg** %6, align 8
  %24 = getelementptr inbounds %struct.nd_msg, %struct.nd_msg* %23, i32 0, i32 0
  %25 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %24, i32 0, i32 0
  %26 = load i64, i64* %25, align 8
  %27 = icmp eq i64 %26, 0
  br i1 %27, label %28, label %35

28:                                               ; preds = %22
  %29 = load %struct.nd_msg*, %struct.nd_msg** %6, align 8
  %30 = getelementptr inbounds %struct.nd_msg, %struct.nd_msg* %29, i32 0, i32 0
  %31 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %30, i32 0, i32 1
  %32 = load i64, i64* %31, align 8
  %33 = load i64, i64* @NDISC_NEIGHBOUR_SOLICITATION, align 8
  %34 = icmp eq i64 %32, %33
  br label %35

35:                                               ; preds = %28, %22, %16, %2
  %36 = phi i1 [ false, %22 ], [ false, %16 ], [ false, %2 ], [ %34, %28 ]
  %37 = zext i1 %36 to i32
  ret i32 %37
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
